# dbt-fusion

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/dbt-adapter/: Cargo.toml
crates/dbt-adapter/src/: cache.rs  connection.rs  format_ident.rs  lib.rs  record_batch.rs  render_constraint.rs  sql_types.rs  stmt_splitter.rs
crates/dbt-adapter/src/adapter/: adapter_factory.rs  adapter_impl.rs  bigquery_reservation.rs  mod.rs  tests.rs
crates/dbt-adapter/src/column/: column_builder.rs  types.rs
crates/dbt-adapter/src/engine/: adapter_engine.rs  record_replay.rs  retry.rs  xdbc.rs
crates/dbt-adapter/src/metadata/: freshness_overrides.rs  get_relation.rs  metadata_adapter.rs  mod.rs
crates/dbt-adapter/src/mock/: adapter.rs
crates/dbt-adapter/src/relation/: config_v2.rs  factory.rs  mod.rs  relation_impl.rs  relation_object.rs
crates/dbt-adapter/src/sql/: dialect.rs  extract_sources.rs  mod.rs
crates/dbt-adapter/src/time_machine/: event.rs  event_replay.rs  mod.rs  semantic.rs  validation.rs
crates/dbt-adapter/tests/: snowflake_context_deadline_exceeded.rs  snowflake_statement_timeout.rs
crates/dbt-adapter/tests/snowflake_context_deadline_exceeded_repro_project/: README.md  blackhole.py  dbt_project.yml  profiles.yml
crates/dbt-ci/: Cargo.toml  README.md
crates/dbt-ci/src/: args.rs  bump_cargo_version.rs  lib.rs  main.rs  pack.rs  publish.rs  pyproject.rs  release_version.rs  utils.rs
crates/dbt-ci/src/homebrew/: mod.rs  publish.rs  render.rs
crates/dbt-clap-core/: Cargo.toml
crates/dbt-clap-core/src/: commands.rs  lib.rs
crates/dbt-common/: Cargo.toml
crates/dbt-common/src/: adapter.rs  cli_parser_trait.rs  discrete_event_emitter.rs  io_args.rs  io_utils.rs  mod.rs  path.rs  stats.rs  status_reporter.rs  tokiofs.rs
crates/dbt-common/src/tracing/: config.rs  data_provider.rs  emit.rs  mod.rs  tracing_feature_handles.rs
crates/dbt-compilation/: Cargo.toml  deny.toml
crates/dbt-compilation/src/: config.rs  core.rs  lib.rs  schedule.rs  schema_hydration.rs  timezone.rs  traits.rs
crates/dbt-defer/: Cargo.toml
crates/dbt-defer/src/: lib.rs
crates/dbt-docs-core/: Cargo.toml
crates/dbt-docs-core/src/: lib.rs
crates/dbt-docs-server/: API-CONTRACTS.md  Cargo.toml  build.rs
crates/dbt-docs-server/src/: assets.rs  embed.rs  lib.rs  server.rs  state.rs
crates/dbt-docs-server/src/handlers/: capabilities.rs  distribution.rs  exposures.rs  exposures_tests.rs  files_tests.rs  groups.rs  groups_tests.rs  health.rs  json.rs  lineage.rs  lineage_tests.rs  macros.rs  macros_tests.rs  metrics.rs  metrics_tests.rs  mod.rs  models.rs  models_tests.rs  node_base.rs  nodes.rs  pagination.rs  saved_queries.rs  saved_queries_tests.rs  search.rs  search_tests.rs  seeds.rs  seeds_tests.rs  semantic_models.rs  semantic_models_tests.rs  snapshots.rs  snapshots_tests.rs  sources.rs  sources_tests.rs  sql.rs  tests.rs  tests_tests.rs
crates/dbt-docs-server/src/providers/: mod.rs
crates/dbt-docs-server/web/: .gitignore  UI_VERSION
crates/dbt-features/: Cargo.toml
crates/dbt-features/src/: cli.rs  cli_extension.rs  feature_stack.rs  feature_stack_builder.rs  index.rs  loader.rs  metricflow.rs  mod.rs  resolver.rs  sa.rs  sidecar.rs  task_runner.rs  tracing.rs
crates/dbt-index-core/: Cargo.toml
crates/dbt-index-core/src/: backend.rs  column_lineage.rs  db.rs  epoch_layers.rs  error.rs  freshness.rs  lib.rs  parquet.rs
crates/dbt-index-core/src/format/: mod.rs
crates/dbt-lineage-core/: Cargo.toml
crates/dbt-lineage-core/src/: lib.rs
crates/dbt-loader/: Cargo.toml
crates/dbt-loader/src/: clean.rs  cloud_http_client.rs  dbt_project_yml_loader.rs  download_manifest.rs  load_packages.rs  load_profiles.rs  loader.rs  loader_hooks.rs  mod.rs  utils.rs
crates/dbt-login/: Cargo.toml
crates/dbt-login/src/: execute.rs  execute_status.rs  lib.rs  license_fetcher.rs  state_guidance.rs
crates/dbt-main/: Cargo.toml
crates/dbt-main/src/: compilation.rs  ctrl_c.rs  dbt_lib.rs  driver.rs  install_method.rs  lib.rs  main_impl.rs  partial_parse.rs  retry.rs  uninstall.rs  update.rs  utils.rs  vars.rs  version_check.rs
crates/dbt-parser/: Cargo.toml
crates/dbt-parser/src/: args.rs  lib.rs  parallel.rs  renderer.rs  renderer_test.rs  resolver.rs  resolver_hooks.rs  tests.rs  utils.rs
crates/dbt-platform-auth/: Cargo.toml  README.md
crates/dbt-platform-auth/examples/: dbt_login.rs  default_chain.rs  interactive_chain.rs
crates/dbt-platform-auth/src/: chain.rs  credential.rs  error.rs  lib.rs  session_cache.rs
crates/dbt-run-cache/: Cargo.toml  build.rs
crates/dbt-run-cache/src/: metadata_cache.rs  mod.rs  node_session.rs  proto.rs  redis_config.rs  request_builder.rs  run_cache_defer.rs  service_client.rs  service_config.rs  task_cache.rs  task_cache_noop.rs  task_cache_redis.rs  view_traversal.rs
crates/dbt-run-cache/src/auth/: mod.rs  (+4 more)
crates/dbt-run-cache/tests/: interactive_auth.rs  test.rs
crates/dbt-sa-cli/: Cargo.toml
crates/dbt-sa-cli/src/: main.rs
crates/dbt-sa-cli/tests/: common.rs  dbt_sa_cli_tests.rs
crates/dbt-schemas/: Cargo.toml
crates/dbt-schemas/src/: lib.rs  state.rs
crates/dbt-tasks-core/: Cargo.toml  deny.toml
crates/dbt-tasks-core/src/: compiled_sql_cache.rs  compiler_env.rs  context.rs  context_factory.rs  lib.rs  local_schema_builder.rs  metricflow.rs  precompile.rs  render_task_hooks.rs  run_cache_lifecycle.rs  run_task_hooks.rs  run_tasks_args.rs  schema_hydration.rs  show_task_hooks.rs  static_analysis_buckets.rs  stats_to_results.rs  task.rs  task_runner_hooks.rs  task_spans.rs  test_aggregation.rs  utils.rs
crates/dbt-tasks-sa/: Cargo.toml
crates/dbt-tasks-sa/src/: barrier.rs  compilation_pipeline.rs  compiled_sql_cache.rs  constraints.rs  context.rs  debug.rs  graph.rs  lib.rs  materialize.rs  register_seeds.rs  run_adhoc.rs  run_operation.rs  schema_hydrator.rs  task.rs  task_runner.rs  task_runner_hooks.rs  utils.rs  visitor.rs
crates/dbt-test-utils/: Cargo.toml
crates/dbt-test-utils/src/: profiles.rs
crates/vortex-events/: Cargo.toml
crates/vortex-events/src/: event_functions.rs
(+348 files in other folders)
