[package]
name = "dbt-adapter"
description = "dbt Adapter Layer"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-adapter-core = { workspace = true }
dbt-adapter-sql = { workspace = true }
dbt-agate = { workspace = true }
dbt-auth = { workspace = true }
dbt-cloud-config = { workspace = true }
dbt-common = { workspace = true }
dbt-frontend-common = { workspace = true }
dbt-handles = { workspace = true }
dbt-schema-store = { workspace = true }
dbt-schemas = { workspace = true }
dbt-sql-utils = { workspace = true }
dbt-telemetry = { workspace = true }
dbt-xdbc = { workspace = true }
dbt-yaml = { workspace = true }
xdbc-record-replay = { workspace = true }

arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
base64 = { workspace = true }
parquet = { workspace = true }

adbc-core = { workspace = true }
chrono = { workspace = true }
crossbeam-skiplist = { workspace = true }
crossbeam-utils = { workspace = true }
dashmap = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
fancy-regex = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
md5 = { workspace = true }
minijinja = { workspace = true, features = ["loader", "deserialization"] }
minijinja-contrib = { workspace = true, features = ["datetime", "timezone"] }
once_cell = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
scc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracy-client = { workspace = true }
ureq = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dbt-test-primitives = { workspace = true }
dirs = { workspace = true }
ini = { workspace = true }
insta = { version = "1.38.0", features = ["glob"] }
minijinja-contrib = { workspace = true, features = [
  "datetime",
  "timezone",
  "testing",
] }
tempfile = { workspace = true }

[lib]
name = "dbt_adapter"
path = "src/lib.rs"
doctest = false

[features]
odbc = ["dbt-xdbc/odbc"]
