[package]
name = "dbt-clap-core"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
console = { workspace = true }
dbt-common = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "dbt_clap_core"
doctest = false
