[package]
name = "dbt-common"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-adapter-core = { workspace = true }
dbt-error = { workspace = true }
dbt-frontend-common = { workspace = true }
dbt-telemetry = { workspace = true }
# leaf dependencies (depend on little more than std lib)
blake3 = { workspace = true }
dbt-base = { workspace = true }
hex = { workspace = true }
md5 = { workspace = true }
once_cell = { workspace = true }

clap = { workspace = true, features = ["derive", "env"] }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

arrow = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
console = { workspace = true }
dashmap = { workspace = true }
dbt-yaml = { workspace = true }
humantime = { workspace = true }
minijinja = { workspace = true }
parquet = { workspace = true }
scc = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

arc-swap = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

normalize-path = { workspace = true }
pathdiff = { workspace = true }

dbt-tui-progress = { workspace = true }
rust-embed = { workspace = true }

# Tracing
proto-rust = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Embedded OTLP exporter for traces
dbt-fusion-workspace-hack = { version = "0.1" }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }

[target.'cfg(windows)'.dependencies]
dunce = "1.0.5"
powershell_script = "1.1.0"

[dev-dependencies]
bytes = { workspace = true }
dbt-telemetry = { workspace = true, features = ["test-utils"] }
dbt-test-primitives = { workspace = true }
indoc = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lib]
name = "dbt_common"
path = "src/mod.rs"
doctest = false
