[package]
name = "dbt-features"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
dbt-adapter = { workspace = true }
dbt-clap-core = { workspace = true }
dbt-common = { workspace = true }
dbt-compilation = { workspace = true }
dbt-dag = { workspace = true }
dbt-docs-server = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-jinja-utils = { workspace = true }
dbt-schema-store = { workspace = true }
dbt-schemas = { workspace = true }
dbt-tasks-core = { workspace = true }

minijinja = { workspace = true }
uuid = { workspace = true }
vortex-events = { workspace = true }

[lib]
name = "dbt_features"
path = "src/mod.rs"
doctest = false
